// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createTokenObject test: dark theme > should match snapshot 1`] = `
{
  "border-width": {
    "focus": {
      "1": "1",
      "2": "2",
    },
    "l": "2",
    "m": "1",
  },
  "color": {
    "background": {
      "default": "rgba(31, 31, 31, 1)",
      "secondary": "rgba(21, 21, 21, 1)",
      "tertiary": "rgba(6, 6, 6, 1)",
    },
    "border": {
      "default": "rgba(228, 228, 228, 0.41)",
      "disable": "rgba(228, 228, 228, 0.05)",
      "focus": {
        "1": "rgba(114, 181, 245, 1)",
        "2": "rgba(39, 84, 126, 1)",
        "legacy": "rgba(0, 150, 250, 0.32)",
      },
      "hover": "rgba(228, 228, 228, 0.505)",
      "hud": "rgba(31, 31, 31, 1)",
      "negative": "rgba(136, 54, 46, 1)",
      "press": "rgba(228, 228, 228, 0.61)",
      "secondary": "rgba(228, 228, 228, 0.1)",
      "selected": "rgba(8, 114, 190, 1)",
    },
    "container": {
      "default": "rgba(31, 31, 31, 1)",
      "default-a": "rgba(228, 228, 228, 0)",
      "disable": "rgba(51, 51, 51, 1)",
      "discovery": {
        "default": "rgba(197, 60, 51, 1)",
        "hover": "rgba(217, 88, 76, 1)",
        "press": "rgba(233, 114, 102, 1)",
      },
      "hover": "rgba(41, 41, 41, 1)",
      "hover-a": "rgba(228, 228, 228, 0.05)",
      "hud": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(202, 202, 202, 1)",
        "press": "rgba(188, 188, 188, 1)",
      },
      "negative": {
        "default": "rgba(197, 60, 51, 1)",
        "hover": "rgba(217, 88, 76, 1)",
        "press": "rgba(233, 114, 102, 1)",
      },
      "neutral": {
        "default": "rgba(112, 112, 112, 1)",
        "hover": "rgba(130, 130, 130, 1)",
        "press": "rgba(151, 151, 151, 1)",
      },
      "notice": {
        "default": "rgba(222, 185, 7, 1)",
        "hover": "rgba(231, 199, 80, 1)",
        "press": "rgba(252, 227, 145, 1)",
      },
      "on-img": {
        "default": "rgba(31, 31, 31, 0.37)",
        "hover": "rgba(31, 31, 31, 0.475)",
        "press": "rgba(31, 31, 31, 0.635)",
      },
      "positive": {
        "default": "rgba(13, 129, 5, 1)",
        "hover": "rgba(58, 150, 52, 1)",
        "press": "rgba(86, 169, 79, 1)",
      },
      "press": "rgba(51, 51, 51, 1)",
      "press-a": "rgba(228, 228, 228, 0.1)",
      "primary": {
        "default": "rgba(8, 114, 190, 1)",
        "hover": "rgba(55, 136, 208, 1)",
        "press": "rgba(83, 156, 224, 1)",
      },
      "secondary": {
        "default": "rgba(41, 41, 41, 1)",
        "default-a": "rgba(228, 228, 228, 0.05)",
        "hover": "rgba(51, 51, 51, 1)",
        "hover-a": "rgba(228, 228, 228, 0.1)",
        "press": "rgba(81, 81, 81, 1)",
        "press-a": "rgba(228, 228, 228, 0.255)",
      },
      "skeleton": "rgba(228, 228, 228, 0.05)",
      "subtle": "rgba(228, 228, 228, 0.02)",
      "tertiary": {
        "default": "rgba(51, 51, 51, 1)",
        "default-a": "rgba(228, 228, 228, 0.1)",
        "hover": "rgba(81, 81, 81, 1)",
        "hover-a": "rgba(228, 228, 228, 0.255)",
        "press": "rgba(112, 112, 112, 1)",
        "pressA": "rgba(228, 228, 228, 0.41)",
      },
    },
    "icon": {
      "default": "rgba(228, 228, 228, 1)",
      "disable": "rgba(130, 130, 130, 1)",
      "hover": "rgba(202, 202, 202, 1)",
      "negative": {
        "default": "rgba(252, 147, 134, 1)",
        "hover": "rgba(249, 186, 177, 1)",
        "press": "rgba(254, 219, 214, 1)",
      },
      "notice": {
        "default": "rgba(222, 167, 29, 1)",
        "hover": "rgba(231, 199, 80, 1)",
        "press": "rgba(252, 227, 145, 1)",
      },
      "on-negative": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "on-neutral": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "on-notice": {
        "default": "rgba(41, 41, 41, 1)",
        "hover": "rgba(41, 41, 41, 1)",
        "press": "rgba(41, 41, 41, 1)",
      },
      "on-on-img": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "on-positive": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "on-primary": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "positive": {
        "default": "rgba(120, 194, 113, 1)",
        "hover": "rgba(161, 215, 155, 1)",
        "press": "rgba(191, 241, 186, 1)",
      },
      "press": "rgba(188, 188, 188, 1)",
      "secondary": {
        "default": "rgba(175, 175, 175, 1)",
        "hover": "rgba(188, 188, 188, 1)",
        "press": "rgba(202, 202, 202, 1)",
      },
      "tertiary": {
        "default": "rgba(130, 130, 130, 1)",
        "hover": "rgba(175, 175, 175, 1)",
        "press": "rgba(188, 188, 188, 1)",
      },
    },
    "text": {
      "brand-premium": {
        "default": "rgba(253, 158, 22, 1)",
        "hover": "rgba(243, 152, 21, 1)",
        "press": "rgba(213, 133, 18, 1)",
      },
      "default": "rgba(228, 228, 228, 1)",
      "disable": "rgba(130, 130, 130, 1)",
      "hover": "rgba(202, 202, 202, 1)",
      "info": {
        "default": "rgba(114, 181, 245, 1)",
        "hover": "rgba(166, 205, 245, 1)",
        "press": "rgba(207, 230, 253, 1)",
      },
      "negative": {
        "default": "rgba(252, 147, 134, 1)",
        "hover": "rgba(249, 186, 177, 1)",
        "press": "rgba(254, 219, 214, 1)",
      },
      "notice": {
        "default": "rgba(222, 167, 29, 1)",
        "hover": "rgba(231, 199, 80, 1)",
        "press": "rgba(252, 227, 145, 1)",
      },
      "on-discovery": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "on-hud": {
        "default": "rgba(31, 31, 31, 1)",
        "hover": "rgba(31, 31, 31, 1)",
        "press": "rgba(31, 31, 31, 1)",
      },
      "on-negative": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "on-notice": {
        "default": "rgba(41, 41, 41, 1)",
        "hover": "rgba(41, 41, 41, 1)",
        "press": "rgba(41, 41, 41, 1)",
      },
      "on-on-img": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "on-positive": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "on-primary": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "placeholder": {
        "default": "rgba(112, 112, 112, 1)",
        "hover": "rgba(112, 112, 112, 1)",
        "press": "rgba(112, 112, 112, 1)",
      },
      "positive": {
        "default": "rgba(120, 194, 113, 1)",
        "hover": "rgba(161, 215, 155, 1)",
        "press": "rgba(191, 241, 186, 1)",
      },
      "press": "rgba(188, 188, 188, 1)",
      "secondary": {
        "default": "rgba(175, 175, 175, 1)",
        "hover": "rgba(188, 188, 188, 1)",
        "press": "rgba(202, 202, 202, 1)",
      },
      "tertiary": {
        "default": "rgba(130, 130, 130, 1)",
        "hover": "rgba(175, 175, 175, 1)",
        "press": "rgba(188, 188, 188, 1)",
      },
      "visited": {
        "default": "rgba(191, 160, 246, 1)",
        "hover": "rgba(210, 192, 245, 1)",
        "press": "rgba(233, 223, 255, 1)",
      },
    },
  },
  "paragraph-width": {
    "l": "672",
    "l-compact": "588",
    "l-cozy": "924",
    "m": "448",
    "m-compact": "392",
    "m-cozy": "616",
    "s": "320",
    "s-compact": "280",
    "s-cozy": "588",
  },
  "radius": {
    "0": "0",
    "l": "12",
    "m": "8",
    "oval": "999999",
    "s": "4",
    "xl": "16",
    "xs": "2",
    "xxl": "24",
  },
  "space": {
    "between-checkboxes": {
      "horizontal": "12",
      "vertical": "0",
    },
    "layout": {
      "0": "0",
      "10": "4",
      "100": "440",
      "20": "8",
      "25": "12",
      "30": "16",
      "40": "24",
      "50": "40",
      "60": "64",
      "70": "104",
      "80": "168",
      "90": "272",
    },
    "target": {
      "l": "48",
      "m": "40",
      "s": "32",
      "xs": "24",
    },
  },
  "text": {
    "font-size": {
      "body": "16",
      "caption": {
        "m": "14",
        "s": "12",
      },
      "heading": {
        "l": "28",
        "m": "25",
        "s": "22",
        "xl": "32",
        "xs": "20",
        "xxl": "36",
        "xxs": "18",
        "xxxl": "40",
        "xxxs": "14",
      },
      "paragraph": "16",
    },
    "font-weight": {
      "bold": "700",
      "regular": "400",
    },
    "line-height": {
      "body": "24",
      "caption": {
        "m": "20",
        "s": "18",
      },
      "heading": {
        "l": "36",
        "m": "32",
        "s": "28",
        "xl": "40",
        "xs": "28",
        "xxl": "44",
        "xxs": "24",
        "xxxl": "52",
        "xxxs": "20",
      },
      "paragraph": "28",
    },
  },
}
`;

exports[`createTokenObject test: light theme > should match snapshot 1`] = `
{
  "border-width": {
    "focus": {
      "1": "1",
      "2": "2",
    },
    "l": "2",
    "m": "1",
  },
  "color": {
    "background": {
      "default": "rgba(255, 255, 255, 1)",
      "secondary": "rgba(243, 243, 243, 1)",
      "tertiary": "rgba(232, 232, 232, 1)",
    },
    "border": {
      "default": "rgba(31, 31, 31, 0.475)",
      "disable": "rgba(31, 31, 31, 0.102)",
      "focus": {
        "1": "rgba(31, 117, 188, 1)",
        "2": "rgba(188, 222, 252, 1)",
        "legacy": "rgba(0, 150, 250, 0.32)",
      },
      "hover": "rgba(31, 31, 31, 0.635)",
      "hud": "rgba(255, 255, 255, 1)",
      "negative": "rgba(253, 206, 199, 1)",
      "press": "rgba(31, 31, 31, 0.775)",
      "secondary": "rgba(31, 31, 31, 0.102)",
      "selected": "rgba(0, 150, 250, 1)",
    },
    "container": {
      "default": "rgba(255, 255, 255, 1)",
      "default-a": "rgba(31, 31, 31, 0)",
      "disable": "rgba(232, 232, 232, 1)",
      "discovery": {
        "default": "rgba(253, 91, 78, 1)",
        "hover": "rgba(206, 54, 46, 1)",
        "press": "rgba(147, 33, 28, 1)",
      },
      "hover": "rgba(243, 243, 243, 1)",
      "hover-a": "rgba(31, 31, 31, 0.055)",
      "hud": {
        "default": "rgba(56, 56, 56, 1)",
        "hover": "rgba(81, 81, 81, 1)",
        "press": "rgba(113, 113, 113, 1)",
      },
      "negative": {
        "default": "rgba(253, 91, 78, 1)",
        "hover": "rgba(206, 54, 46, 1)",
        "press": "rgba(147, 33, 28, 1)",
      },
      "neutral": {
        "default": "rgba(148, 148, 148, 1)",
        "hover": "rgba(113, 113, 113, 1)",
        "press": "rgba(81, 81, 81, 1)",
      },
      "notice": {
        "default": "rgba(254, 214, 61, 1)",
        "hover": "rgba(245, 183, 17, 1)",
        "press": "rgba(231, 157, 20, 1)",
      },
      "on-img": {
        "default": "rgba(31, 31, 31, 0.37)",
        "hover": "rgba(31, 31, 31, 0.475)",
        "press": "rgba(31, 31, 31, 0.635)",
      },
      "positive": {
        "default": "rgba(37, 170, 28, 1)",
        "hover": "rgba(17, 131, 8, 1)",
        "press": "rgba(4, 93, 0, 1)",
      },
      "press": "rgba(232, 232, 232, 1)",
      "press-a": "rgba(31, 31, 31, 0.102)",
      "primary": {
        "default": "rgba(0, 150, 250, 1)",
        "hover": "rgba(31, 117, 188, 1)",
        "press": "rgba(24, 81, 130, 1)",
      },
      "secondary": {
        "default": "rgba(243, 243, 243, 1)",
        "default-a": "rgba(31, 31, 31, 0.055)",
        "hover": "rgba(232, 232, 232, 1)",
        "hover-a": "rgba(31, 31, 31, 0.102)",
        "press": "rgba(217, 217, 217, 1)",
        "press-a": "rgba(31, 31, 31, 0.17)",
      },
      "skeleton": "rgba(31, 31, 31, 0.055)",
      "subtle": "rgba(31, 31, 31, 0.02)",
      "tertiary": {
        "default": "rgba(232, 232, 232, 1)",
        "default-a": "rgba(31, 31, 31, 0.102)",
        "hover": "rgba(217, 217, 217, 1)",
        "hover-a": "rgba(31, 31, 31, 0.17)",
        "press": "rgba(194, 194, 194, 1)",
        "pressA": "rgba(31, 31, 31, 0.27)",
      },
    },
    "icon": {
      "default": "rgba(31, 31, 31, 1)",
      "disable": "rgba(194, 194, 194, 1)",
      "hover": "rgba(56, 56, 56, 1)",
      "negative": {
        "default": "rgba(206, 54, 46, 1)",
        "hover": "rgba(147, 33, 28, 1)",
        "press": "rgba(103, 22, 17, 1)",
      },
      "notice": {
        "default": "rgba(161, 99, 9, 1)",
        "hover": "rgba(110, 72, 5, 1)",
        "press": "rgba(74, 51, 7, 1)",
      },
      "on-negative": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "on-neutral": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(243, 243, 243, 1)",
        "press": "rgba(232, 232, 232, 1)",
      },
      "on-notice": {
        "default": "rgba(31, 31, 31, 1)",
        "hover": "rgba(31, 31, 31, 1)",
        "press": "rgba(31, 31, 31, 1)",
      },
      "on-on-img": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "on-positive": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "on-primary": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "positive": {
        "default": "rgba(17, 131, 8, 1)",
        "hover": "rgba(4, 93, 0, 1)",
        "press": "rgba(4, 93, 0, 1)",
      },
      "press": "rgba(81, 81, 81, 1)",
      "secondary": {
        "default": "rgba(81, 81, 81, 1)",
        "hover": "rgba(56, 56, 56, 1)",
        "press": "rgba(31, 31, 31, 1)",
      },
      "tertiary": {
        "default": "rgba(113, 113, 113, 1)",
        "hover": "rgba(81, 81, 81, 1)",
        "press": "rgba(56, 56, 56, 1)",
      },
    },
    "text": {
      "brand-premium": {
        "default": "rgba(253, 158, 22, 1)",
        "hover": "rgba(243, 152, 21, 1)",
        "press": "rgba(213, 133, 18, 1)",
      },
      "default": "rgba(31, 31, 31, 1)",
      "disable": "rgba(194, 194, 194, 1)",
      "hover": "rgba(56, 56, 56, 1)",
      "info": {
        "default": "rgba(31, 117, 188, 1)",
        "hover": "rgba(24, 81, 130, 1)",
        "press": "rgba(19, 58, 93, 1)",
      },
      "negative": {
        "default": "rgba(206, 54, 46, 1)",
        "hover": "rgba(147, 33, 28, 1)",
        "press": "rgba(103, 22, 17, 1)",
      },
      "notice": {
        "default": "rgba(161, 99, 9, 1)",
        "hover": "rgba(110, 72, 5, 1)",
        "press": "rgba(74, 51, 7, 1)",
      },
      "on-discovery": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "on-hud": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "on-negative": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "on-notice": {
        "default": "rgba(31, 31, 31, 1)",
        "hover": "rgba(31, 31, 31, 1)",
        "press": "rgba(31, 31, 31, 1)",
      },
      "on-on-img": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "on-positive": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "on-primary": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "placeholder": {
        "default": "rgba(148, 148, 148, 1)",
        "hover": "rgba(148, 148, 148, 1)",
        "press": "rgba(148, 148, 148, 1)",
      },
      "positive": {
        "default": "rgba(17, 131, 8, 1)",
        "hover": "rgba(4, 93, 0, 1)",
        "press": "rgba(7, 64, 4, 1)",
      },
      "press": "rgba(81, 81, 81, 1)",
      "secondary": {
        "default": "rgba(81, 81, 81, 1)",
        "hover": "rgba(56, 56, 56, 1)",
        "press": "rgba(31, 31, 31, 1)",
      },
      "tertiary": {
        "default": "rgba(113, 113, 113, 1)",
        "hover": "rgba(81, 81, 81, 1)",
        "press": "rgba(56, 56, 56, 1)",
      },
      "visited": {
        "default": "rgba(103, 39, 171, 1)",
        "hover": "rgba(70, 32, 115, 1)",
        "press": "rgba(40, 16, 70, 1)",
      },
    },
  },
  "paragraph-width": {
    "l": "672",
    "l-compact": "588",
    "l-cozy": "924",
    "m": "448",
    "m-compact": "392",
    "m-cozy": "616",
    "s": "320",
    "s-compact": "280",
    "s-cozy": "588",
  },
  "radius": {
    "0": "0",
    "l": "12",
    "m": "8",
    "oval": "999999",
    "s": "4",
    "xl": "16",
    "xs": "2",
    "xxl": "24",
  },
  "space": {
    "between-checkboxes": {
      "horizontal": "12",
      "vertical": "0",
    },
    "layout": {
      "0": "0",
      "10": "4",
      "100": "440",
      "20": "8",
      "25": "12",
      "30": "16",
      "40": "24",
      "50": "40",
      "60": "64",
      "70": "104",
      "80": "168",
      "90": "272",
    },
    "target": {
      "l": "48",
      "m": "40",
      "s": "32",
      "xs": "24",
    },
  },
  "text": {
    "font-size": {
      "body": "16",
      "caption": {
        "m": "14",
        "s": "12",
      },
      "heading": {
        "l": "28",
        "m": "25",
        "s": "22",
        "xl": "32",
        "xs": "20",
        "xxl": "36",
        "xxs": "18",
        "xxxl": "40",
        "xxxs": "14",
      },
      "paragraph": "16",
    },
    "font-weight": {
      "bold": "700",
      "regular": "400",
    },
    "line-height": {
      "body": "24",
      "caption": {
        "m": "20",
        "s": "18",
      },
      "heading": {
        "l": "36",
        "m": "32",
        "s": "28",
        "xl": "40",
        "xs": "28",
        "xxl": "44",
        "xxs": "24",
        "xxxl": "52",
        "xxxs": "20",
      },
      "paragraph": "28",
    },
  },
}
`;
